# books_tululu

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml  check.yml  deploy.yml
books/: admin.py  forms.py  models.py  tt.py  views.py
books/management/commands/: _tululu.py  get_books_from_tululu.py  load_books_to_db.py  tululu.py
books/management/tululu_download/: 0003_auto_20231222_0846.py
books/migrations/: 0001_initial.py  0002_auto_20231222_1826.py  0002_auto_20231224_0158.py  0002_bookprogress.py
books/templates/: authors.html  base.html  book_page.html  books.html  genres.html  new_book.html  paginator.html  paginator_copy.html  reader.html  search_details.html  update_book.html
books/templates/books/: book_page.html  books.html  new_book.html  search_details.html  (+1 more)
books/templatetags/: my_tags.py  page_range_filter.py
books/utils/: tululu.py
books/views/: books.py  books_actions.py  user.py
books_downloads/: books.json
books_downloads/books/: Авангардист.txt  Аванпост.txt  Авария Серебряной стрелы.txt  Аватара.txt  Авессалом.txt  Авось !!.txt  Австралийский газонокосильщик.txt  Автобиография.txt  Автограф Гагарина.txt  Автозавры.txt  Автомат.txt  Автоматизированный отель.txt  Автоматический сочинитель.txt  Автоматический тигр.txt  Автомобильная чума.txt  Автор о себе.txt  Автор семян акации.txt  Автор, консультант, редактор, корректор или интимный процесс творчества.txt  Авторский вариант.txt  Авторское послесловие к мини-серии Немного об Идущих во Тьму.txt  Автострада запредельности.txt  Аз победиши или Между землёй и небом - война.txt  Азазел (рассказы) (-).txt  Азазел (рассказы).txt  Азартные игры высшего порядка.txt  Азатот.txt  Азиатский берег.txt  Азы.txt  Акванавты.txt  Аквариумы.txt  Акула.txt  Акулу еще не съели! (Акулу цъели - 1).txt  Акулу хотят съесть ! (Акулу цъели - 2).txt  Акулы.txt  Аламагуса.txt  Аламазон и его пехота.txt  Алая Книга Западных Пределов.txt  Алая книга Готреда.txt  Алая чума.txt  Алгебра любви.txt  (+175 more)
books_library/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: docker-compose.yaml  docker-compose.yml
logs/django/: debug_django.log.1  debug_django.log.2  debug_django.log.3
tests/: conftest.py  settings.py  test_forms.py  test_models.py  test_views_books.py  test_views_books_action.py  test_views_user.py
(+5 files in other folders)
