[tool.poetry]
name = "books_library"
version = "0.1.0"
description = ""
authors = ["Vladimir Shatskiy <vovaysach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0,<5.0"
django-extensions = "3.2.3"
beautifulsoup4 = "4.11.1"
requests = "2.28.0"
pathvalidate = "2.5.0"
lxml = "4.9.0"
more-itertools = "10.1.0"
pillow = "10.1.0"
faker = "22.5.0"
crispy-bootstrap4 = "2023.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-stubs = "^4.2.7"
mypy = "^1.8.0"
types-beautifulsoup4 = "^4.12.0.20240106"
ruff = "^0.1.14"
pytest-cov = "^4.1.0"
pytest = "^8.0.0"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.11
plugins = ["mypy_django_plugin.main"]
disallow_untyped_defs = true
ignore_missing_imports = false
disallow_incomplete_defs = true
exclude = '''(?x) (env\.|^migrations\.|^manage\.py$|^conftest\.py$|^test\.|^tests\.|tests|conftest.py)'''

[[tool.mypy.overrides]]
module = "conftest.py"
disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "books_library.settings"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F",]
ignore = [] 

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "settings.py",
    "test_*.py",
    "conftest.py",
    "tests.py"
    ]
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = 'py311'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "books_library.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py", "test*.py"]
addopts = [
    '--cov=books',
    '--cov-report=xml:coverage.xml',
    '--cov-branch',
    '--cov-fail-under=2',
    ]